# LEGS

./: .gitignore  pyproject.toml
api/proto/: legs.proto
deploy/docker/: docker-compose.planA.yml  docker-compose.planB.yml  dog.Dockerfile  server.Dockerfile
deploy/k8s/: server-infer-deploy.yaml  server-train-job.yaml
deploy/monitoring/: prometheus.yml
deploy/monitoring/grafana-provisioning/datasources/: prometheus.yml
deploy/systemd/: legs-dog.service  legs-server.service
scripts/: run_navigation_demo.sh
scripts/audit/: legs_audit.sh
scripts/security/: bootstrap_ssh_keys.sh
scripts/sync/: sync_and_smoke.sh
